# testrepository

./: pyproject.toml
mysite/: settings.py  urls.py
render/: views.py
render/templates/render/: index.html
staticfiles/: staticfiles.json
