[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["ellie-narducci <ellie@exponentlabs.io>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.6"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"
whitenoise = {extras = ["brotli"], version = "^5.2.0"}
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
